src/main/java/com/example/project_management_tool/presentation/shared/error/CustomSystemRoleModificationException.java
package com.example.project_management_tool.presentation.shared.error;

public class CustomSystemRoleModificationException extends RuntimeException {
    public CustomSystemRoleModificationException(String message) {
        super(message);
    }
}
